// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`panel component 1`] = `
<details
  className="Container"
  open={false}
>
  <summary>
    Header
  </summary>
  Content
</details>
`;

exports[`panel component 2`] = `
<details
  className="Container"
  open={true}
>
  <summary>
    Header
  </summary>
  Content
</details>
`;
